# deep-research

./: .gitignore  Dockerfile  docker-compose.yml  langgraph.json  main.py  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/agents/: __init__.py  agents.py  llm.py
src/config/: __init__.py  agents.py  configuration.py  loader.py  tools.py
src/graph/: __init__.py  builder.py  nodes.py  types.py
src/llms/: llm.py
src/prompts/: browser.md  coder.md  coordinator.md  planner.md  planner_model.py  reporter.md  researcher.md  template.py
src/server/: app.py  chat_request.py
src/tools/: __init__.py  python_repl.py  search.py
src/tools/tavily_search/: __init__.py  tavily_search_result_with_images.py  taviy_search_api_wrapper.py
src/utils/: json_utils.py
