[project]
name = "deep-research"
version = "0.1.0"
description = "A deep researcher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "json-repair>=0.44.1",
    "langchain-community>=0.3.23",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "uvicorn>=0.34.2",
]
